--- a/src/app/components/bookstore-app/product-list/product-item/product-item.component.html
+++ b/src/app/components/bookstore-app/product-list/product-item/product-item.component.html
@@ -2,8 +2,8 @@
     <img width="100%" src="" alt="">
 
     <div class="card-body">
-        <p class="card-text">{{ livro.name }}</p>
-        <p class="card-text">{{ livro.url }}</p>
+        <p class="card-text">{{ livro.livro }}</p>
+        <p class="card-text">{{ livro.ano }}</p>
         
         <div class="btn-group">
             <button type="button" class="btn btn-sm btn-primary">Comprar</button>
