--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,29 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-  <a class="navbar-brand col-md-2" href="#">
-    <app-header></app-header>
-  </a>
-
-  <div class="collapse navbar-collapse col-md-2" id="conteudoNavbarSuportado">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Desativado</a>
-      </li>
-    </ul>
-    
-    <div class="input-group col-md-4">
-      <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Botão</button>
+<nav class="navbar navbar-light bg-light navbar-expand">
+    <a class="navbar-brand ml" href="#">
+      <app-header></app-header>
+    </a>
+  
+    <div class="navbar-collapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Livros</a>
+        </li>
+      </ul>
+  
+      <div class="input-group mr-auto">
+        <input type="text" class="form-control" placeholder="Pesquise por título" aria-label="Pesquise por título" aria-describedby="button-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Pesquisar</button>
+        </div>
       </div>
     </div>
-  </div>
 </nav>
+
 
 
