--- a/src/app/components/bookstore-app/product-list/product-list.component.html
+++ b/src/app/components/bookstore-app/product-list/product-list.component.html
@@ -1,7 +1,6 @@
 <div class="row">
-    <div class="col" *ngFor="let livro of livros">
-
-        <app-product-item [livro]="livro"></app-product-item>
+    <div *ngFor="let pokemon of pokemons">
+        {{ pokemon }}
 
     </div>
 </div>
