--- a/src/app/components/bookstore-app/product-list/product-list.component.html
+++ b/src/app/components/bookstore-app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div *ngFor="let pokemon of pokemons">
-        {{ pokemon }}
-
+    <div *ngFor="let book of books">
+        <p class="card-text">{{ book.titulo }}</p>
+        <p class="card-text"> {{ book.ano }}</p>
     </div>
 </div>
