--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,2 +1,2 @@
 <hr>
-<small>&copy;Leticia.</small>
+<small>Pequeno site desenvolvido com Angular. Desafio DIO. Co-criado por &copy;Leticia Duarte Rosa.</small>
