--- a/src/app/components/bookstore-app/filters/filters.component.html
+++ b/src/app/components/bookstore-app/filters/filters.component.html
@@ -1,17 +1,14 @@
-<div class="card">
-    <div class="card-header">Filtros</div>
+<div class="card mt-2 border border-secondary">
+    <div class="card-header border-secondary">Filtre por ano</div>
+
     <div class="card-body">
         <form>
             <div class="form-group">
-                <label for="de">De:</label>
+                <label for="de">Ano:</label>
             <input type="number" id="de" class="form-control">
             </div>
             
-            <div class="form-group">
-                <label for="ate">Até:</label>
-            <input type="number" id="ate" class="form-control">                
-            </div>
-            <button class="btn btn-primary btn-block">Filtrar</button>
+            <button class="btn btn-secondary btn-block mt-2">Filtrar</button>
         </form>
     </div>
 
